# MagnetDownload

./: .gitignore  .gitmodules  ARCHITECTURE.md  ASIO_EXPERIMENTS.md  ASIO_LEARNING_GUIDE.md  ASYNC_MODULE_IMPLEMENTATION.md  BUILD.md  BUILD_GUIDE.md  CMakeLists.txt  CPP_CONCEPTS_GUIDE.md  Compile.md  IMPLEMENTATION_ROADMAP.md  LICENSE  PACKAGING_SUMMARY.md  README.md  workflow.md  磁力链接解析设计文档.md
.github/workflows/: build-and-package.yml  ci.yml  cppcheck.yml
3rd/cef/: README.md
cmake/: DownloadCEF.cmake  packaging.cmake  version.cmake  version.h.in
doc/: asio_api_guide.md
docs/: ARCHITECTURE.md  ARCHITECTURE_MODULES_AND_FLOW.md  CEF_前后端通信方案对比.md  CEF_原生IPC实施方案.md  CEF_窗口集成方案分析.md  CEF_集成实施指南.md  DEBUG_NOTES.md  DESIGN_GUIDE.md  EVENTLOOP_AND_SCHEDULER_EXPLAINED.md  EventLoopManager_Implementation_Guide.md  GUI_技术规划.md  Logger_Implementation_Guide.md  PHASE1_IMPLEMENTATION_GUIDE.md  PROJECT_ARCHITECTURE_ANALYSIS.md  ROADMAP.md  TASK_DECOMPOSITION_STRATEGY.md  debug_summary_2026-01-13.md  github-branch-protection.md  工程目录结构设计.md  设计与实现计划.md
docs/design/: EventLoopManager_Design.md  multi_task_architecture_design.md  multi_task_implementation_plan.md  qbittorrent_architecture_analysis.md  开源项目参考.md  磁力链接下载完整流程.md
docs/design/界面项目规划/: CEF_Integration_Guide.md  CEF_Integration_Roadmap.md  CEF_Technical_Requirements.md  Frontend_Technology_Analysis.md  GUI_Design_Specification.md  GUI_Implementation_Guide.md  GUI_Mockups.md  UI_Feature_Requirements.md
docs/gitMessageGuidelines/: GIT_COMMIT_GUIDELINES.md
docs/单元测试/: 单元测试用例设计.md  测试框架集成指南.md
experiments/: 04_lambda_lifetime.h  05_udp_basic.h  06_multithreading.h  CMakeLists.txt  main.cpp
include/magnet/application/: download_controller.h
include/magnet/async/: event_loop_manager.h  task_scheduler.h  types.h
include/magnet/network/: network_types.h  tcp_client.h  udp_client.h
include/magnet/protocols/: bencode.h  bencode_types.h  bt_message.h  dch_types.h  dht_client.h  dht_message.h  magnet_types.h  magnet_uri_parser.h  metadata_extension.h  metadata_fetcher.h  peer_connection.h  peer_manager.h  query_manager.h  routing_table.h  tracker_client.h
include/magnet/storage/: file_manager.h  piece_manager.h
include/magnet/utils/: logger.h  sha1.h
packaging/linux/: magnetdownload.desktop
packaging/windows/: magnetdownload.rc
scripts/: build.bat  build.sh  release.sh
src/: CMakeLists.txt  bencode.cpp  bencode.h  file_manager.cpp  file_manager.h  magnet_uri.cpp  magnet_uri.h  main.cpp  peer.h  peer_connection.cpp  peer_connection.h  tracker.cpp  tracker.h
src/application/: CMakeLists.txt  download_controller.cpp  main.cpp
src/async/: CMakeLists.txt  event_loop_manager.cpp  task_scheduler.cpp
src/core1/: events.cpp  events.h  infohash.cpp  interfaces.h  logger.cpp  logger.h  network.cpp  network.h
src/magnetdownloader/: magnetdownloader.cpp  magnetdownloader.h
src/magnetparser/: magnetparser.cpp  magnetparser.h
src/network/: CMakeLists.txt  network_manager.h  tcp_client.cpp  udp_client.cpp
src/protocol/: protoclo.h
src/protocols/: CMakeLists.txt  bencode.cpp  bt_message.cpp  dch_types.cpp  dht_client.cpp  dht_message.cpp  magnet_uri_parser.cpp  metadata_extension.cpp  metadata_fetcher.cpp  peer_connection.cpp  peer_manager.cpp  query_manager.cpp  routing_table.cpp  tracker_client.cpp
src/storage/: CMakeLists.txt  file_manager.cpp  piece_manager.cpp
src/ui/cef/: CMakeLists.txt
src/ui/cef/common/: cef_app.cpp  cef_app.h  cef_client.cpp  cef_client.h  message_handler.cpp  message_handler.h
src/ui/cef/win/: main_win.cpp
src/ui/console/: CMakeLists.txt  console_interface.cpp
src/ui/qt/: CMakeLists.txt
src/utils/: CMakeLists.txt  logger.cpp
tasklist/: 测试文档索引.md
tasklist/urlparser/: MAGNET_PARSER_USAGE_GUIDE.md  磁力链接url参数解析.md  解析数据结构参考.md
tasklist/协议设计/: BEP9_MetadataExtension设计文档.md  Bencode文档说明.md  Bencode设计文档.md  BtMessage设计文档.md  DHT模块完整设计.md  DhtClient设计文档.md  PeerConnection设计文档.md  PeerManager设计文档.md  QueryManager设计文档.md  RoutingTable路由表设计.md
tasklist/存储设计/: Storage设计文档.md
tasklist/应用设计/: DownloadController设计文档.md
tasklist/网络设计/: TcpClient设计文档.md  UdpClient设计文档.md
tests/: CMakeLists.txt  test_enhanced_task_scheduler.cpp  test_main.cpp
tests/protocols/: test_magnet_uri_parser.cpp  test_node_id.cpp  test_routing_table.cpp
