# MagnetDownload主项目源码
# 当前为占位文件，等实验完成后再实现具体的项目模块

message(STATUS "Configuring MagnetDownload main project...")

# TODO: 当开始实现主项目时，在这里添加以下内容：
#
# # 核心库
# add_library(magnetdownload_core
#     core/event_loop_manager.cpp
#     core/task_scheduler.cpp
#     core/logger.cpp
#     core/config_manager.cpp
# )
#
# # 网络库
# add_library(magnetdownload_network
#     network/udp_client.cpp
#     network/tcp_connection.cpp
#     network/dht_client.cpp
#     network/peer_manager.cpp
# )
#
# # 协议库
# add_library(magnetdownload_protocols
#     protocols/magnet_uri_parser.cpp
#     protocols/bittorrent_protocol.cpp
#     protocols/protocol_adapter.cpp
# )
#
# # 工具库
# add_library(magnetdownload_utils
#     utils/hash_utils.cpp
#     utils/string_utils.cpp
#     utils/file_utils.cpp
# )
#
# # 主可执行文件
# add_executable(magnetdownload
#     main.cpp
# )
#
# # 设置包含目录和链接关系
# # ...

message(STATUS "Main project implementation pending - focus on experiments first!")
